Update src/main/java/bio/terra/app/controller/SearchApiController.java
Co-authored-by: Phil Shapiro <pshapiro@broadinstitute.org>